<resources>
    <string name="app_name">GOGIT</string>
    <string name="gogetit">Go get it \n best shoes store</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOG IN  </string>
    <string name="forgetpassword">Forget Password ?</string>
    <string name="face">LOGIN WITH FACEBOOK</string>
    <string name="google">LOGIN WITH Google</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="signup">SIGN UP</string>
    <string name="signin">SIGN IN</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="emailisused">Email is ِUsed</string>
    <string name="wrongemailorpass">Wrong Email or Password</string>
    <string name="nointernet">No Internet Connection</string>
    <string name="allproduct">ALL SHOES</string>
    <string name="newshoes">NEW SHOES</string>
    <string name="discovershoes">DISCOVER SHOES</string>
    <string name="btn_Addcart">ADD TO CART</string>
    <string name="profile">PROFILE</string>
    <string name="myorders">My Orders</string>
    <string name="editprofile">EDIT PEOFILE</string>
    <string name="language">LANGYAGE</string>
    <string name="logout"> LOGOUT</string>
    <string name="changedata">Change Data</string>
    <string name="changepass">Change Password</string>
    <string name="change">Change </string>
    <string name="confirmpass">ConFirm Password</string>
    <string name="updated">Information has been updated Successfully</string>
    <string name="updatedpassword">Password has been updated Successfully</string>
    <string name="failedmsg">Failed, There is something wrong</string>
    <string name="size">Size</string>
    <string name="checkout"> CHECK OUT</string>
    <string name="tax">Tax: </string>
    <string name="delivery">Delivery: </string>
    <string name="total">Total: </string>
    <string name="men">MEN</string>
    <string name="woman">WOMAN</string>
    <string name="girls">GIRLS</string>
    <string name="boys">BOYS</string>
    <string name="city">City</string>
    <string name="region">Region</string>
    <string name="streetname">Street Name</string>
    <string name="b_number">Building Number</string>
    <string name="f_number">Floor Number</string>
    <string name="apartment_num">Apartment Number</string>
    <string name="ordernow">Order Now</string>
    <string name="country">Country</string>
    <string name="ordersuccess">Congratualtion Your Order added successfully</string>

    <string name="category">CATEGORY</string>
    <string name="brand">BRAND</string>
    <string name="price">PRICE</string>
    <string name="min">MIN</string>
    <string name="max">MAX</string>
    <string name="kids">KIDS</string>
    <string name="filter">FILTER</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selectbrand">Please Select brand</string>
    <string name="selectcategory">Please Select zcategory</string>
    <string name="selecttruemaxprice">Please Make sure that min price lower than max price</string>
    <string name="notfoundresult">No Result Found</string>
    <string name="oldpasswrong">Please Make Sure from your old password</string>
    <string name="newpassword">New Password</string>
    <string name="perviousorder">PREVIOUS ORDERS</string>
    <string name="orderid">Orderid</string>
    <string name="InProgress">In Progress</string>
    <string name="Delivered">Delivered</string>
    <string name="Canceled">Canceled</string>
    <string name="noorders">Not Found Any order</string>
    <string name="english">English</string>
    <string name="herbian">Hebrew</string>
    <string name="arabic">Arabic</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="wantlogout">Do you want to logout?</string>
    <string name="Items">Items</string>
    <string name="Deliver">Deliver</string>
    <string name="payment_method">Payment method</string>
    <string name="Deliveryaddress">Delivery address</string>
    <string name="cash">Cash</string>
    <string name="sub_total">sub total </string>
    <string name="Tax">Tax </string>
    <string name="Delivery_fees">Delivery fees </string>

</resources>
