<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.gogit.Fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_editprofile"
        android:name="com.gogit.Fragments.Profiler_Fragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_editprofile" />

    <fragment
        android:id="@+id/nav_myorders"
        android:name="com.gogit.Fragments.MyOrders_Fragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_my_orders" />

    <activity
        android:id="@+id/nav_logout"
        android:name="com.gogit.Activties.LogOut"
        android:label="@string/menu_tools"
        tools:layout="@layout/activity_log_out" />

    <activity
        android:id="@+id/nav_language"
        android:name="com.gogit.Activties.Language"
        android:label="@string/language"
        tools:layout="@layout/fragment_my_orders" />

</navigation>