<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.Another_Filtertion">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_30sdp">

            <EditText
                android:id="@+id/T_Max"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:inputType="number"
                android:text="@string/max"
                android:textColor="#afafaf"
                android:textColorHint="#afafaf"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/T_min"
                app:layout_constraintTop_toBottomOf="@+id/textsize" />

            <TextView
                android:id="@+id/textsize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="20dp"
                android:text="@string/price"
                android:textColor="#444343"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recycler_Sizes" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/Recycle_Brands"
                android:layout_width="349dp"
                android:layout_height="152dp"
                android:layout_marginTop="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.451"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="20dp"
                android:text="@string/brand"
                android:textColor="#444343"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Recycle_Categories" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="28dp"
                android:text="@string/category"
                android:textColor="#444343"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/T_Title" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/Recycle_Categories"
                android:layout_width="349dp"
                android:layout_height="152dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarProducts"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/white"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/img_filter"
                android:layout_width="41dp"
                android:layout_height="48dp"
                app:layout_constraintEnd_toEndOf="@+id/toolbarProducts"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="@+id/toolbarProducts"
                app:layout_constraintTop_toTopOf="@+id/toolbarProducts"
                app:srcCompat="@drawable/logo_toolbar" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#EEEEEE"
                app:layout_constraintTop_toBottomOf="@+id/toolbarProducts"
                tools:layout_editor_absoluteX="16dp" />

            <TextView
                android:id="@+id/T_Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="TextView"
                android:textColor="#444343"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_filter" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="24dp"
                android:text="@string/size"
                android:textColor="#444343"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Recycle_Brands" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_Sizes"
                android:layout_width="382dp"
                android:layout_height="45dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <EditText
                android:id="@+id/T_min"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:inputType="number"
                android:text="@string/min"
                android:textColor="#afafaf"
                android:textColorHint="#afafaf"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textsize" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>