<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.Filtertion_Fragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrain_Men"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbarProducts"
        tools:layout_editor_absoluteX="0dp">

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#EEEEEE"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="16dp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="20dp"
            android:layout_height="23dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="32dp"
            android:src="@drawable/icon_arrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/T_Man"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/men"
            android:textColor="#444343"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrain_Woman"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/constrain_Men"
        tools:layout_editor_absoluteX="0dp">

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#EEEEEE"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="16dp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="20dp"
            android:layout_height="23dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="32dp"
            android:src="@drawable/icon_arrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/T_Woman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/woman"
            android:textColor="#444343"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrain_kids"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/constrain_Woman"
        tools:layout_editor_absoluteX="0dp">

        <View
            android:id="@+id/view5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#EEEEEE"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="16dp" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="20dp"
            android:layout_height="23dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="32dp"
            android:src="@drawable/icon_arrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/T_Kids"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/kids"
            android:textColor="#444343"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarProducts"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/img_filter"
        android:layout_width="41dp"
        android:layout_height="48dp"
        app:layout_constraintEnd_toEndOf="@+id/toolbarProducts"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/toolbarProducts"
        app:layout_constraintTop_toTopOf="@+id/toolbarProducts"
        app:srcCompat="@drawable/logo_toolbar" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#EEEEEE"
        app:layout_constraintTop_toBottomOf="@+id/toolbarProducts"
        tools:layout_editor_absoluteX="16dp" />



</androidx.constraintlayout.widget.ConstraintLayout>